# rust-podcast-downloader

./: Cargo.toml  README.md  how-to
-Err-Uri-Malformed/: zzzz-podcast_address.rss
-Err-Uri-Not-Exist/: zzzz-podcast_address.rss
Stuff-You-Should-Know/: podcast_address.rss
art-in-nature/: rss_url.txt
jpl/: rss_url.txt
nasa/: rss_url.txt
noexist/: podcast_address.rss
not-xml/: podcast_address.rss
src/: all_events.rs  app.rs  app_show.rs  app_state.rs  app_ui.rs  area_rects.rs  areas_consts.rs  chunk_range.rs  close_error.rs  const_areas.rs  const_globals.rs  down_app.rs  episode_colors.rs  episode_scroll.rs  episode_threads.rs  episodes_chunks.rs  episodes_files.rs  ev_after_draw.rs  ev_all.rs  ev_click.rs  ev_key.rs  ev_scroll.rs  file_log.rs  file_status.rs  g_current_active.rs  g_pause_io.rs  g_resource_speed.rs  get_episode.rs  input_box.rs  main.rs  misc_fun.rs  podcast_episodes.rs  podcast_files.rs  podcast_scroll.rs  render_add.rs  render_app.rs  render_controls.rs  render_inputs.rs  render_misc.rs  render_radio_check.rs  (+6 more)
src/chunks/: chunk_range.rs  episode_threads.rs  episodes_chunks.rs  mod.rs
src/components/: btn_every.rs  btn_new.rs  btn_quit.rs  btn_stop.rs  chars_feed.rs  chars_status.rs  chars_title.rs  checkbox_pause.rs  input_address.rs  input_name.rs  mod.rs  radio_resource.rs  words_feed.rs  words_larger.rs  words_status.rs  words_title.rs
src/console_ui/: lib.rs
src/consts/: area_rects.rs  areas_consts.rs  const_areas.rs  const_colors.rs  const_globals.rs  consts_areas.rs  consts_globals.rs  consts_rects.rs  consts_types.rs  mod.rs  the_types.rs
src/dialogs/: dialog_error.rs  dialog_help.rs  dialog_render.rs  dialog_sure.rs  mod.rs  ok_dialogs.rs  render_inputs.rs  render_misc.rs
src/episodes/: episode_colors.rs  episode_event.rs  episode_show.rs  episode_state.rs  mod.rs
src/events/: ev_all.rs  ev_checks.rs  ev_click.rs  ev_click_ui.rs  ev_clicked_filter.rs  ev_hover.rs  ev_key.rs  ev_scroll.rs  mod.rs
src/files/: file_log.rs  file_xml.rs  mod.rs  rss_xml.rs
src/globals/: g_active.rs  g_current_active.rs  g_pause.rs  g_pause_io.rs  g_resource_speed.rs  g_speed.rs  g_stop.rs  g_stop_io.rs  mod.rs
src/media/: media_chunks.rs  media_range.rs  media_threads.rs  mod.rs
src/misc/: misc_fun.rs  misc_tui.rs  misc_ui.rs  mod.rs  tui_term.rs
src/podcasts/: mod.rs  (+5 more)
(+25 files in other folders)
