[package]
name = "rust-podcast-downloader"
version = "0.26.1" # crate version
authors = ["Florian Dehau <work@fdehau.com>", "The Ratatui Developers"]
description = "A library that's all about cooking up terminal user interfaces"
documentation = "https://docs.rs/ratatui/latest/ratatui/ ????????????????????"
keywords = ["tui", "terminal", "podcast"]
repository = "https://github.com/steenhansen/rust-podcast-downloader"
readme = "README.md"
license = "MIT"
exclude = [
  "target/*",
  ".github",
  "Makefile.toml",
  "CONTRIBUTING.md",
  "*.log",
  "tags",
]

edition = "2021"
rust-version = "1.74.0"


[dependencies]
crossterm = { version = "0.27", optional = true }
bitflags = "2.3"
cassowary = "0.3"
indoc = "2.0"
itertools = "0.12"
paste = "1.0.2"
strum = { version = "0.26", features = ["derive"] }
unicode-segmentation = "1.10"
unicode-width = "0.1"
lru = "0.12.0"
stability = "0.1.1"
compact_str = "0.7.1"
log = "0.4.21"
log4rs = "1.3.0"
ratatui-widgets = "0.1.4"
ratatui = "0.26.1"
http_req = "0.10.2"
roxmltree = "0.19.0"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["blocking", "stream"] }
reqwest-streams = "0.5.1"
futures-util = "0.3.30"
lazy_static = "1.4.0"
once_cell = "1.19.0"
thousands = "0.2.0"
time = "0.3.36"
url = "2.5.0"

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"

# nursery or restricted
as_underscore = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_line_after_doc_comments = "warn"
equatable_if_let = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
map_err_ignore = "warn"
missing_const_for_fn = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
needless_raw_strings = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
use_self = "warn"

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm"]

